@@ -3,18 +3,21 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += [
-            '-Xlint:preview',
-            '-Xlint:unchecked',
-            '-Xlint:deprecation'
-    ]
-}
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs.addAll([
+                '--enable-preview',
+                '-Xlint:preview',
+                '-Xlint:unchecked',
+                '-Xlint:deprecation'
+        ])
+    }
 
-tasks.withType(ScalaCompile) {
-    scalaCompileOptions.forkOptions.with {
-        memoryMaximumSize = '1g'
-        jvmArgs = ['-XX:MaxPermSize=512m']
+    tasks.withType(ScalaCompile) {
+        scalaCompileOptions.forkOptions.with {
+            memoryMaximumSize = '1g'
+            jvmArgs = ['-XX:MaxPermSize=512m']
+        }
     }
 }
 
@@ -32,6 +35,7 @@ configure([
     }
 
     test {
+        jvmArgs(['--enable-preview'])
         useJUnitPlatform()
         finalizedBy jacocoTestReport
     }
