@@ -10,8 +10,8 @@ version = '0.0.1-SNAPSHOT'
 
 description = 'university-server'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_13
+targetCompatibility = JavaVersion.VERSION_13
 
 task clientCopy(type: Copy, dependsOn: ':university-client:build') {
     from '../university-client/dist'
@@ -19,6 +19,7 @@ task clientCopy(type: Copy, dependsOn: ':university-client:build') {
 }
 
 bootRun {
+    jvmArgs(['--enable-preview'])
     args = ['--spring.profiles.active=dev']
 }
 
